Added main menu, fixed score, fixed collision with item
also added death menu (not yet used)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,13 +1,6 @@
 [URL]
 GameName=MyProject
 
-[/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Example_Map
-EditorStartupMap=/Game/Maps/Example_Map
-GlobalDefaultGameMode=/Game/Blueprints/MyGame.MyGame_C
-
-
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_TopDownBP",NewGameName="/Script/MyProject")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_TopDownBP",NewGameName="/Script/MyProject")
@@ -53,5 +46,18 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Engine/Maps/Templates/Template_Default
+EditorStartupMap=/Game/Maps/Example_Map
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameDefaultMap=/Engine/Maps/Entry
+GameDefaultMap=/Game/Maps/startScreen
+GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultGameMode=/Game/Blueprints/MyGame.MyGame_C
+GlobalDefaultServerGameMode=None
 
 
