score (not working)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,6 +54,8 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/myInstance.myInstance_C
 GameDefaultMap=/Engine/Maps/Entry
 GameDefaultMap=/Game/Maps/startScreen
 GlobalDefaultGameMode=/Script/Engine.GameMode
